added quotes back in

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -13,7 +13,7 @@ Thank you to Ainsley, Porter, Trey, and Ryker for always providing a smile.
 
 I would also like to acknowledge numerous other people for providing
 guidance and support during the process.
-I will only use first names, but you know who you are. Thank you to: Jess, Chris, Clay, 
-Bob, Todd, Leslie, Mike, and Ralph.
+I will only use first names, but you know who you are. Thank you to: Clay, Jess, Chris,  
+Bob, Todd, Leslie, and Mike.
 
 \end{document}
