rearranged some figures so they appear more inline with the appropriate content

--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -944,7 +944,7 @@
         the correlated element. 
         
     \subsection{SENSITIVITY OF CRI}
-    \label{sub:sensitivity}
+    \label{sec:sensitivity}
         The sensitivity of the formulas should be tested as the scores should not
         flucate drastically for similar values.  There are 2 possible techniques
         for testing the sensitivity of the formulas. 
@@ -1038,7 +1038,7 @@
                 and simple.  This is a significant advantage for software 
                 development organizations. \\
                 How sensitive are the results to small changes in one or more of the inputs? & 
-                The question was extensively addressed in section \ref{sub:sensitivity}.  It appears CRI is
+                The question was extensively addressed in section \ref{sec:sensitivity}.  It appears CRI is
                 not overly sensitive to small changes in the inputs.\\
                 
                 \bottomrule
