use SDO everywhere instead of software development organization

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -18,11 +18,11 @@
     measurement of how this software is produced.  
     
     This work 
-    provides a technique for a software development organization to create
+    provides a technique for a Software Development Organization (SDO) to create
     a single number score which indicates the overall performance
     of the organization. The
     score is based upon data collected for 5 key result indicators
-    of a software development organization: quality, availability,
+    of an SDO: quality, availability,
     satisfaction, schedule, and requirements.  It is not meant
     to be comparative between organizations, but to 
     form a historical baseline for a specific organization.  The single
@@ -31,7 +31,7 @@
 
 \subsection{OVERVIEW}
     
-    Software development organizations are no different than 
+    An SDO is no different than 
     any other business or organization.  There are: tasks
     to be completed, goals to achieve (or miss), and measurements
     to be analyzed.  One difficulty with software development
@@ -44,20 +44,20 @@
     historical performance if the same measurements are not consistent
     throughout the recent history of an organization. 
     
-    Software development organizations need a framework to define
+    SDOs need a framework to define
     what measurements should be tracked and how those measurements
     should be reported.  The Cumulative Result Indicator (CRI)
     framework provides a solid foundation
     for a consistent evaluation.  CRI analyzes the historical performance
-    of a Software Development Organization (SDO)
+    of an SDO
     to create a baseline in order to provide a broad
     view of the overall organization.  It is common for software development
     organizations to measure and focus soley on the source code
-    being produced.  However, a software development organization does more
+    being produced.  However, an SDO does more
     than just produce source code.  There is documentation to be
     written, testcases to be created, systems to be deployed, and
     decisions to be made.  The framework provides an evaluation
-    of the overall software development organization, not just the
+    of the overall SDO, not just the
     source code.
     
     The framework will produce a single number score for each of 
@@ -66,9 +66,9 @@
     The scores will enable performance to be consistently measured
     and compared.
 
-    Other attempts at evaluating a software development organization
+    Other attempts at evaluating an SDO
     have been presented, but none produce a single number score for
-    the entire effort of the software development organization. 
+    the entire effort of the SDO. 
     The following are attempts to evaluate all or parts of 
     software development.
 
@@ -307,7 +307,7 @@
     
     Although process mining can be useful for analyzing software
     development data, it has not yet been applied to the entirety 
-    of a software development organization. It also does not
+    of an SDO. It also does not
     focus on the results of the organization.  It focuses
     on process conformance, which can be very important, so it
     is limited in the ability to evaluate the entire organization. 
@@ -317,7 +317,7 @@
     metrics \cite{Jones1996, Putnam2013}. Yet, 
     organizations still struggle to measure the production of software.
     Little work exists
-    for scoring the entire software development organization. 
+    for scoring the entire SDO. 
 
 \subsubsection{SEMAT}
 
@@ -410,14 +410,14 @@
     \cite{Miguel2014}.  While all of the models have merit
     in certain situations, the measures of quality must be combined
     with other measures in order to provide an overall evaluation
-    of a software development organization.
+    of an SDO.
     
 
 \subsubsection{SOFTWARE ANALYTICS}
 \label{subsub:softwareanalytics}
 
     One area of research that is focusing on the evaluation 
-    of software development organizations
+    of SDOs
     is \textit{software analytics}. 
     Software analytics is less focused on evaluation
     and more so on all sorts of analysis of software data.
@@ -570,7 +570,7 @@
     The remainder of this dissertation is divided into 7 chapters.  Chapter 2 provides
     an overview of software, software development life cycles, software engineering, and software
     development organizations.  Chapter 3 introduces some existing techniques for measuring
-    a software development organization. Chapter 4 then provides an explanation of the Cumulative
+    an SDO. Chapter 4 then provides an explanation of the Cumulative
     Result Indicator (CRI).  It will present the essential elements for calculating the CRI, as well
     as the formulas, framework, and data necessary to produce the CRI. Chapter 5 provides
     a technological framework for storing the current and historical CRI values.
