--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -4,8 +4,8 @@
 
 \section{A SOFTWARE DEVELOPMENT ORGANIZATION (SDO)}
 A \textit{Software Development Organization (SDO)} is any organization or subset of an organization that is responsible
-for the creation, deployment, and maintenance of software.  Many times a software development organization
-is a company that produces software.  Other times, a software development organization is contained
+for the creation, deployment, and maintenance of software.  Many times an SDO
+is a company that produces software.  Other times, an SDO is contained
 within the Information Technology department of a larger organization. Some of the job roles
 with an SDO are: software engineer, system administrator, software quality analyst,
 programmer, database administrator, and documentation specialist.
