--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -4,14 +4,14 @@
 \section{CUMULATIVE RESULT INDICATOR (CRI)}
 \label{sec:CRI}
 
-    Software development organizations struggle to measure overall performance.  
+    SDOs struggle to measure overall performance.  
     The \textit{Cumulative Result Indicator (CRI)} is an algorithm to provide a single 
-    number score to measure the performance of a software development organization. 
+    number score to measure the performance of an SDO. 
     It works by statistically analyzing the past performance of the 
     organization and using that information to score an organization 
     on current performance.  CRI is a collection of the following 5 
     elements, which are actually KRIs,
-    for a software development organization.
+    for an SDO.
     \textbf{
     \begin{enumerate}
         \item Quality
@@ -1015,7 +1015,7 @@
             software analytics must address.  Table \ref{tab:questions} presents the 3 questions
             and a description of how CRI addresses that specific question.  It is clear
             that CRI addresses the questions.  CRI is a beneficial technique of software
-            analytics when applied to software development organizations.
+            analytics when applied to SDOs.
         
             \begin{longtable}{p{4cm}p{10cm}}
                 
@@ -1031,7 +1031,7 @@
                 
                 How much better is my model performing than a naive strategy, such as guessing? & CRI 
                 provides consistency which may not exist without it.  Therefore, CRI removes the 
-                guesswork of measuring a software development organization. \\
+                guesswork of measuring an SDO. \\
                 \myrowcolour%
                 How practically significant are the results? & The CRI score is consistent
                 and easy to comprehend.  Thus comparison with past performance is quick 
