--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -18,7 +18,8 @@
     measurement of how this software is produced.  
     
     This work 
-    provides a technique for a Software Development Organization (SDO) to create
+    provides a technique for a Software Development Organization (SDO)
+    \nomenclature{SDO}{Software Development Organization}to create
     a single number score which indicates the overall performance
     of the organization. The
     score is based upon data collected for 5 key result indicators
@@ -47,6 +48,7 @@
     SDOs need a framework to define
     what measurements should be tracked and how those measurements
     should be reported.  The Cumulative Result Indicator (CRI)
+    \nomenclature{CRI}{Cumulative Result Indicator}
     framework provides a solid foundation
     for a consistent evaluation.  CRI analyzes the historical performance
     of an SDO
@@ -82,16 +84,19 @@
     
         \item[Application] - a software system or a collection of other applications 
         \item[Release] - A collection of projects being put in production on a specified date
-        \item[Project] - A body of work involving zero or more applications in preparation for a release
-        \item[SIT]   (Systems Integration Testing) - The initial step of testing
+        \item[Project] - A body of work involving zero or more applications in preparation for a release 
+        \item[SIT] (Systems Integration Testing) - The initial step of testing
             after the development phase of the SDLC.  This is typically 
             performed by members of the SDO.  It is validation that all the
             software components function together as expected.
-        \item[UAT]   (User Acceptance Testing) - The final step of testing
+            \nomenclature{SIT}{Systems Integration Testing} 
+        \item[UAT] (User Acceptance Testing) - The final step of testing
             when a select few members of the user group are invited to
             validate the software system. Once validation has occured for
             UAT, the software system is ready to proceed to production
-        \item[PROD]  (Production) - The software has been released to the final audience.
+            \nomenclature{UAT}{User Acceptance Testing} 
+        \item[PROD] (Production) - The software has been released to the 
+        final audience. \nomenclature{PROD}{Production} 
         \item[defect] ``A software defect is a bug or error that causes
                     software to either stop operating or to produce
                     invalid or unacceptable results'' as quoted from Capers Jones
@@ -104,7 +109,8 @@
 
 
 \subsection{CMMI}
-    The Capability Maturity Model Integration (CMMI) is one of the most 
+    The Capability Maturity Model Integration (CMMI)
+    \nomenclature{CMMI}{Capability Maturity Model Integration} is one of the most 
     widely acknowledged models for process 
     improvement in software development.  CMMI offers a generic guideline 
     and appraisal program for process 
@@ -323,7 +329,9 @@
 
     Software Engineering Method and Theory (SEMAT) is claiming to 
     be the ``new software engineering'' 
-    \cite{Jacobson2014}.  The authors rightfully claim that 
+    \cite{Jacobson2014}. 
+    \nomenclature{SEMAT}{Software Engineering Method and Theory}
+    The authors rightfully claim that 
     software engineering lacks
     an underlying theoretical foundation found in other 
     engineering disciplines.  This lack of theory
@@ -578,5 +586,9 @@
     a large financial institution. Chapter 7 discusses some possible future directions 
     for further enhancements. Chapter 8 concludes the dissertation with a summary
     of the results. 
+
+
+
+
 
 \end{document}
