--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 
-\section{A SOFTWARE DEVELOPMENT ORGANIZATION (SDO)}
+\section{A SOFTWARE DEVELOPMENT ORGANIZATION}
 A \textit{Software Development Organization (SDO)} is any organization or subset of an organization that is responsible
 for the creation, deployment, and maintenance of software.  Many times an SDO
 is a company that produces software.  Other times, an SDO is contained
@@ -21,7 +21,8 @@ This is the definition used for the remainder of this work.
 \subsection{THE SOFTWARE DEVELOPMENT LIFE CYCLE}
     The discipline of software engineering has created a workflow for developing
     software.  
-    This workflow is called the \textit{Software Development Life Cycle (SDLC)}.
+    This workflow is called the \textit{Software Development Life Cycle (SDLC)}
+    \nomenclature{SDLC}{Software Development Life Cycle}.
     SDLC can be defined as \cite{Ruparelia2010}:
     \begin{quote}
      [...] a conceptual framework or process that considers the structure of the stages
@@ -179,8 +180,11 @@ This is the definition used for the remainder of this work.
 \label{sec:swe}
     \textit{Software Engineering} as a term dates back to the 
     1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013, Naur1969}. Over the 
-    years many definitions have been provided.  IEEE provides a definition that encompasses many of the
-    other definitions.  IEEE ISO610.12 defines software engineering as, 
+    years many definitions have been provided.  Institute of Electrical 
+    and Electronics Engineers (IEEE) provides a definition that encompasses 
+    many of the other definitions.
+    \nomenclature{IEEE}{Institute of Electrical and Electronics Engineers}
+    IEEE ISO610.12 defines software engineering as, 
     ''The application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software''
     \cite{Ieee1990}.
     
