--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -39,7 +39,9 @@
         for an SDO. 
         \begin{itemize}
             \item SLOC - The number of Source Lines of Code 
+                \nomenclature{SLOC}{Source Lines Of Code}
             \item NOM - The Number of Methods per class
+                \nomenclature{NOM}{Number of Methods}
             \item Complexity - A numerical measure of the code complexity,
                 some common examples are McCabe \cite{McCabe1976} and 
                 Halstead \cite{Halstead1977}
@@ -74,8 +76,13 @@
         The differences between the indicators will be explored and
         possible measures for each indicator in an SDO will be
         presented.   The four
-        types of indicators important to an SDO are shown
+        categories of indicators important to an SDO are shown
         in Table \ref{tab:indicators}.
+        
+        \nomenclature{RI}{Result Indicator}
+        \nomenclature{KRI}{Key Result Indicator}
+        \nomenclature{PI}{Performance Indicator}
+        \nomenclature{KPI}{Key Performance Indicator}
         
         \begin{longtable}{@{}l l}
             \toprule%
@@ -233,7 +240,8 @@
                 \item Not financial
                 \item Measured frequently (hourly, daily, weekly)
                 \item Acted on by CEO\footnote{Chief Executive Officer} 
-                    and/or senior management
+                    and/or upper-level management 
+                    \nomenclature{CEO}{Chief Executive Officer}
                 \item Clearly indicate the action required
                 \item Tie responsibility to a particular team
                 \item Have a significant impact
