--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -26,9 +26,9 @@
     then aggregated together to form an overall 
     CRI score.  A new CRI score will be calculated based
     upon the selection of a given time period (weekly, monthly, quarterly).
-    \textbf{CRI is not meant to be comparative between
+    CRI is not meant to be comparative between
     organizations, but to measure the amount of increase or decrease
-    a single organization exhibits across elements}.  CRI is made to be easily 
+    a single organization exhibits across elements.  CRI is made to be easily 
     expandable to other elements if desired.
     
     The scores for CRI will range from -1, indicating the worst 
@@ -169,7 +169,7 @@
                         etc.  Estimated time can be applied to development or testing
                         effort.  It is common for the estimated and actual times
                         to be diffent.
-                    \item[Source Lines Of Code (SLOC)]  This number is the count of 
+                    \item[SLOC]  This number is the count of 
                         the total number of lines of source code for a project. 
                         Obviously, 
                         this item only counts as a level of
