--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -14,7 +14,7 @@
     it will be able to alleviate
     some of the dishonesty that is currently present in software projects 
     \cite{Rost2011}. This storage system will be named the SDLC Analytic 
-    Engine (SDLC-AE). 
+    Engine (SDLC-AE). \nomenclature{SDLC-AE}{SDLC Analytic Engine}
     
     \begin{figure}[hbt]
         \includegraphics[scale=.75]{images/sdlcae.png}
@@ -36,7 +36,7 @@
         lay out the structure of tables and relationships necessary to the store all the data
         within a relational database.  The SQL\footnote{Structured Query Language (SQL) is 
         a programming language designed for managing data in relational database 
-        management system.} 
+        management system.\nomenclature{SQL}{Structured Query Language}} 
         is written for an Oracle
         database, but the scripts can be modified to work with another database
         such as: PostgreSQL, SQL Server, or MySQL.  
