abbreviation page spacing

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -220,7 +220,8 @@
 
 %% Abbreviations
 \newpage
-\printnomenclature
+\printnomenclature[1.0in]
+\addcontentsline{toc}{section}{ABREVIATIONS}
 
 %% List of figures
 \newpage
