--- a/abstract.tex
+++ b/abstract.tex
@@ -32,6 +32,6 @@ The primary goal of this work is to provide a general framework for what a softw
 should measure and how to report on those measurements.  The focus is providing a single number
 to represnet the entire
 organization and not just the development efforts.  That single number is considered the CRI score. The secondary goal of this work is to provide
-a software implementation of that framework.
+a framework for storing the necessary data.
 
 \end{document}
