--- a/abstract.tex
+++ b/abstract.tex
@@ -31,7 +31,8 @@ organization over time.
 The primary goal of this work is to provide a general framework for what a software development organization
 should measure and how to report on those measurements.  The focus is providing a single number
 to represent the entire
-organization and not just the development efforts.  That single number is considered the CRI score. The secondary goal of this work is to provide
+organization and not just the development efforts.  That single number is considered the 
+Cumulative Result Indicator (CRI) score. The secondary goal of this work is to provide
 a framework for storing the necessary data.
 
 \end{document}
