updates the chapter 1 this work to this dissertation

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -15,7 +15,7 @@ programmer, database administrator, and documentation specialist.
 Numerous definitions can be found for the term \textit{software}.
 Software is more than just computer programs. According to Ian Sommerville \cite{Sommerville2001}, 
 "Software is not just the programs but also all associated documentation and configuration data which is needed to make these programs operate correctly."
-This is the definition used for the remainder of this work.
+This is the definition used for the remainder of this dissertation.
 
 
 \subsection{THE SOFTWARE DEVELOPMENT LIFE CYCLE}
