--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -16,10 +16,10 @@
     \begin{enumerate}
         \item Identify Process Issues
         \item Select And Define Measures
-        \item Integrate with Software Process
+        \item Integrate with the Software Process
     \end{enumerate}
     
-    This work will focus on steps 1 and 2.  The process issue is the overall
+    This dissertation will focus on steps 1 and 2.  The process issue is the overall
     effectiveness of the SDO.  Section \ref{sec:CRI} will cover step 2 as
     it relates to an SDO.  Step
     3 will be different for each SDO, but Section \ref{sec:SDLC-AE} provides
