--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -68,12 +68,12 @@
     Development Organization (SDO). The entire SDO needs to be measured 
     and analyzed properly, not just the development portion. 
     Knowing which metrics to use and what they all mean can be a daunting task.  
-    This work identified the Cumulative Result Indicator (CRI) which is a
+    This dissertation identified the Cumulative Result Indicator (CRI) which is a
     proposed solution to the difficulty of measuring an SDO by creating a
     single number score for upper-level management to use to quickly gauge
     performance. 
     
-    The following have all been provided in this work.
+    The following have all been provided in this dissertation.
     \begin{itemize}
         \item CRI defines what 5 elements of an SDO should be measured.
             Result indicators are included for quality, availability, satisfaction,
