--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -17,7 +17,7 @@
     going to be critical.  Just as important will be the effective 
     measurement of how this software is produced.  
     
-    This work 
+    This dissertation 
     provides a technique for a Software Development Organization (SDO)
     \nomenclature{SDO}{Software Development Organization}to create
     a single number score which indicates the overall performance
@@ -54,10 +54,10 @@
     of an SDO
     to create a baseline in order to provide a broad
     view of the overall organization.  It is common for software development
-    organizations to measure and focus soley on the source code
+    organizations to measure and focus solely on the source code
     being produced.  However, an SDO does more
     than just produce source code.  There is documentation to be
-    written, testcases to be created, systems to be deployed, and
+    written, test cases to be created, systems to be deployed, and
     decisions to be made.  The framework provides an evaluation
     of the overall SDO, not just the
     source code.
@@ -92,7 +92,7 @@
             \nomenclature{SIT}{Systems Integration Testing} 
         \item[UAT] (User Acceptance Testing) - The final step of testing
             when a select few members of the user group are invited to
-            validate the software system. Once validation has occured for
+            validate the software system. Once validation has occurred for
             UAT, the software system is ready to proceed to production
             \nomenclature{UAT}{User Acceptance Testing} 
         \item[PROD] (Production) - The software has been released to the 
@@ -135,7 +135,7 @@
     \begin{description}
         \item[CMMI MATURITY LEVEL 1 - INITIAL]
             A maturity level 1 organization consists of an
-                adhoc and chaotic processes.  While working
+                impromptu and chaotic process.  While working
                 products are still produced, the results are 
                 often over budget and behind schedule.  A level
                 1 organization will also have difficulties 
@@ -237,7 +237,7 @@
 
     A visual description of the CMMI maturity levels can be seen in Figure \ref{fig:cmmi}.  
     While CMMI-Dev does provide an excellent framework for improving a process, it
-    is wholely focused on process improvement.  It does not provide guidelines
+    is entirely focused on process improvement.  It does not provide guidelines
     for evaluating the final product.  
     Also, it does not provide a specify mechanism for evaluating
     or scoring the progression through the maturity levels.  
@@ -254,17 +254,17 @@
     The methodology provides a score based upon the 
     productivity and quality increase of the technique being evaluated.  
     Points are positive or negative based upon the 
-    presense of various techniques. A couple example techniques are: 
+    presence of various techniques. A couple of example techniques are: 
     automated source code analysis and continuous integration.  The end 
     result is a score in range $[-10,10]$. 
     While the result is a single number score, it does not account for the 
-    entirety of the software development lifecycle.
+    entirety of the software development life cycle.
 
     Constructive Cost Model (COCOMO) is a software cost estimation model created
     by Boehm \cite{Boehm1981}.  It combines future project characteristics
     with historical project data to create a regression model to estimate the 
     cost of a software project.  The original version developed in 1981 was
-    focused on mainframe and batch processing.  An unpdated version, named
+    focused on mainframe and batch processing.  An updated version, named
     COCOMO II, was created by Boehm in 1995 to be more flexible for newer 
     development practices such as desktop development, off the shelf components,
     and code reuse.  COCOMO provides a nice algorithm for making decisions
@@ -281,7 +281,7 @@
     custom rules which are specific to the domain or application.  However,
     Sextant only provides metrics and analysis of the software code.  
     It provides no information regarding the rest of the 
-    software development lifecycle.  Also, the primary output of Sextant 
+    software development life cycle.  Also, the primary output of Sextant 
     is visual graphs.  While these graphs do provide
     useful information, they do not provide a single number 
     to determine the performance of the software.
@@ -406,7 +406,7 @@
     complexity of source code have been created.  The most common examples
     are McCabe \cite{McCabe1976} and Halstead \cite{Halstead1977}.
     However, the measures on source code only explain part of the 
-    software development lifecycle.  
+    software development life cycle.  
     
     Another measurement of quality can be the cost per defect, also 
     known as the cost to fix a problem.  As seen in \cite{Jones2013},
@@ -470,7 +470,7 @@
     These are 3 important questions that should be addressed 
     when presenting any results in software analytics.  The research
     needs to demonstrate clear advantages for practitioners.  The work
-    presented in this work will address both the 3 main focus areas and
+    presented in this dissertation will address both the 3 main focus areas and
     the 3 important questions of software analytics.
 
     Lavazza, Morasca, Taibi, and Tosi focus specifically 
@@ -545,7 +545,7 @@
 
     After the proper tools are in place to collect the necessary
     data on software development and software analytics are being
-    p roperly implemented, an obvious next step is the
+    properly implemented, an obvious next step is the
     application of gamification to software development. Gamification
     is ``the process of making activities more game-like'' \cite{Werbach2014}.
     Some of the benefits of gamification are higher productivity, competition,
@@ -557,7 +557,7 @@
     the software development process \cite{Jain2013}. There are 
     even some indications that gamification might help increase
     software quality \cite{Dubois2013}. 
-    While this work will not focus on gamification, it is important to note
+    While this dissertation will not focus on gamification, it is important to note
     that an implementation of an evaluation technique for software
     development could be implemented simultaneously with a gamification
     strategy. Both will require new collections of data and new reporting.
@@ -568,7 +568,7 @@
     a single number score for the entirety of the 
     organization.  Most of the techniques focus on
     specific portions of the software development 
-    lifecycle, namely the development portion. Plus,
+    life cycle, namely the development portion. Plus,
     there are many tools that need to be created for
     software analytics to provide all the value
     that it promises.
@@ -582,7 +582,7 @@
     Result Indicator (CRI).  It will present the essential elements for calculating the CRI, as well
     as the formulas, framework, and data necessary to produce the CRI. Chapter 5 provides
     a technological framework for storing the current and historical CRI values.
-    Chapter 6 demostrates how CRI can be implemented in a software development portion of 
+    Chapter 6 demonstrates how CRI can be implemented in a software development portion of 
     a large financial institution. Chapter 7 discusses some possible future directions 
     for further enhancements. Chapter 8 concludes the dissertation with a summary
     of the results. 
